--- a/app.json
+++ b/app.json
@@ -19,10 +19,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.lukeharrisondev.rngeoplant"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "c706fc66-0cff-4cca-8978-c22f428ee43f"
+      }
     }
   }
 }
