--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "react": "18.3.1",
     "react-native": "0.76.6",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0"
+    "react-native-screens": "~4.4.0",
+    "react-native-svg": "^15.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@svgr/cli": "^8.1.0",
     "@types/react": "~18.3.12",
     "typescript": "^5.3.3"
   },
