--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
+    "axios": "^1.7.9",
     "expo": "~52.0.25",
     "expo-dev-client": "~5.0.9",
     "expo-status-bar": "~2.0.1",
