--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-native": "0.76.6",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-svg": "^15.11.1"
+    "react-native-svg": "^15.11.1",
+    "expo-font": "~13.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
