--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "axios": "^1.7.9",
     "expo": "~52.0.25",
     "expo-dev-client": "~5.0.9",
+    "expo-font": "~13.0.3",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.6",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-maps": "^1.20.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-svg": "^15.11.1",
-    "expo-font": "~13.0.3"
+    "react-native-svg": "^15.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
