--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "expo": "~52.0.25",
     "expo-dev-client": "~5.0.9",
     "expo-font": "~13.0.3",
+    "expo-image-picker": "^16.0.6",
+    "expo-location": "~18.0.7",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.6",
@@ -23,13 +25,14 @@
     "react-native-maps": "^1.20.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-svg": "^15.11.1",
-    "expo-location": "~18.0.7"
+    "react-native-svg": "^15.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@svgr/cli": "^8.1.0",
     "@types/react": "~18.3.12",
+    "@types/react-native-dotenv": "^0.2.2",
+    "metro-react-native-babel-preset": "^0.77.0",
     "typescript": "^5.3.3"
   },
   "private": true
